# CS350_3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
demo/: CMakeLists.txt  imgui.hpp  main.cpp
imgui/: CMakeLists.txt
src/: CMakeLists.txt  bvh_indexed.cpp  bvh_indexed.hpp
test/: CMakeLists.txt  bvh.cpp  common.cpp  common.hpp
test/bvh_data/: avocado.cs350  avocado.cs350_binary  suzanne.cs350  suzanne.cs350_binary
